# PATINA

./: README.md
PATINA/: CITATION.cff  CONTRIBUTING.md  README.md  eval_fid.py  main.py  pyproject.toml  requirements.txt  run_baseline.sh
PATINA/checkpoints/: config.yml  config_output_audit.local.yml
PATINA/script/: rebuild_hericera_patina.py  smoke_branch_ablation.py  smoke_patina.py  smoke_train_step.py  static_validate_patina.py
PATINA/src/: __init__.py  adaptive_fusion_module.py  config.py  dataset.py  dfcc_module.py  experiment.py  lcbc_module.py  loss.py  models.py  mrda_module.py  networks.py  sem.py
